# redux

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/todo/: CMakeLists.txt
examples/todo/src/: action.h  main.cpp  state.h
examples/todo/src/action/: addtodo.h  removecompleted.h  setvisibilityfilter.h  toggletodo.h
examples/todo/src/state/: todo.h  todoapp.h  todos.h  visibilityfilter.h
redux/: CMakeLists.txt
redux/include/: redux.h
redux/include/redux/: eventloop.h  reducer.h  store.h  view.h  views.h
redux/include/redux/detail/: get.h  overloaded.h
